syntax = "proto3";

package article.v1alpha;

message Article {
    int32 id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 stock = 5;
}

service ArticleCRUDService {

    rpc Get (GetRequest) returns (GetResponse);
    rpc Add (AddRequest) returns (AddResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

// GET
message GetRequest {
    int32 id = 1;
    string name = 2;
}

message GetResponse {
    repeated Article articles = 1;
}


// ADD
message AddRequest {
    string name = 1;
    string description = 2;
    float price = 3;
    int32 stock = 4;
}

message AddResponse {
    Article article = 1;
}


// UPDATE
message UpdateRequest {
    int32 id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 stock = 5;
}

message UpdateResponse {
    Article article = 1;
}


// DELETE
message DeleteRequest {
    int32 id = 1;
}

message DeleteResponse {
    Article article = 1;
}
